manifest-files/12-13.yaml
#controllers/nginx-deployment.yaml
#12. Deploy a pod with replica 3,(Deployment)
#13. Deploy pod nginx:v1, then rollupdate to v2, then rollback previous Version


apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.7.9
        ports:
        - containerPort: 80
