manifest-files/pv.yaml
apiVersion: v1
kind: Pod
metadata:
  name: two-containers
spec:
   restartPolicy: Never
   volumes:
   - name: shared-data
     emptyDir: {}
   containers:
   - name: nginx-container
     image: nginx
     volumeMounts:
     - name: shared-data
       mountPath: /data/redis
