manifest-files/jenkins-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 31032
  selector:
    app: jenkins
---
 apiVersion: v1  
 kind: PersistentVolumeClaim  
 metadata:  
  name: jenkins-pv-claim  
 spec:  
  storageClassName: longhorn
  accessModes:  
   - ReadWriteOnce  
  resources:  
   requests:  
    storage: 5Gi
