manifest-files/sativa.yaml
kind: Pod
apiVersion: v1
metadata:
  name: sativa-app
  labels:
    app:  sativa
spec:
  containers:
    - name:  sativa-app
      image: hashicorp/http-echo
      args:
        - "-text=This is Sativa"

---

kind: Service
apiVersion: v1
metadata:
  name:  sativa-svc
spec:
  selector:
    app:  sativa
  ports:
    - port: 5678 # Default port for image
