manifest-files/Cross-Namespace-Ingress.yaml
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: staging
# YOU NEED TO DEPLOY NGINX_CONTROLLER RESPECTIVE INGRESS TO DIFF NAMESPACES.


---

apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: guestbook
  name: frontend
  #namespace: staging
spec:
  selector:
    matchLabels:
      app: guestbook
      tier: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: guestbook
        tier: frontend
    spec:
      containers:
      - name: frontend-app
        image: gcr.io/google-samples/gb-frontend:v4
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 80 

---

apiVersion: v1
kind: Service
metadata:
  name: frontend
  #namespace: staging
  labels:
    app: guestbook
    tier: frontend
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    app: guestbook
    tier: frontend

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: staging-ingress
  #namespace: staging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /stage 
        backend:
          serviceName: frontend
          servicePort: 80
          
          
#For NAME BASED ROUTING
#spec:
#   rules:
#   - host: foo.bar.com
#     http:
#       paths:
#       - path: /foo
#         backend:
#           serviceName: service1
#           servicePort: 4200
#       - path: /bar
#         backend:
#           serviceName: service2
#           servicePort: 8080
